feat: add toggle todo as done
